cabal-version:      3.4
name:               dave
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/yutotakano/dave
license:            MIT
license-file:       LICENSE
author:             Yuto Takano
maintainer:         moa17stock@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.14.0.0,
        inline-c-cpp ^>=0.5.0.2
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite dave-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.0.0,
        inline-c-cpp ^>=0.5.0.2,
        dave
